--- a/src/app/vending-machine/vending-machine.component.html
+++ b/src/app/vending-machine/vending-machine.component.html
@@ -2,20 +2,21 @@
     <h2>Vending Machine</h2>
   
     <div class="product-list">
-      <div *ngFor="let product of products" class="product">
-        <p>{{product.id}}</p>
-        <p>{{ product.name }}</p>
-        <p>Price: ₹{{ product.price }}</p>
-        <p>Quantity: {{ product.quantity }}</p>
+      <div *ngFor="let product of products" class="product-card">
+        <div class="card">
+          <p>Section Id: {{ product.Sectionid }}</p>
+          <p>Product Id: {{ product.id }}</p>
+          <p>Name : {{ product.name }}</p>
+          <p>Price: ₹{{ product.price }}</p>
+          <p>Quantity: {{ product.quantity }}</p>
+        </div>
       </div>
     </div>
   
     <div class="purchase-product">
-        <h2>Purchase Product</h2>
-        <label for="productId">Select Product:</label>
-        <input type="number" id="quantity" [(ngModel)]="selectedProductId" min="1" />
-        <button (click)="purchaseProduct()">Open Door</button>
-      </div>
-
+      <label for="productId">Select Section:</label>
+      <input type="number" id="quantity" [(ngModel)]="selectedSectionId" min="1" />
+      <button (click)="purchaseProduct()">Open Door</button>
+    </div>
   </div>
   
