--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<a routerLink="/">Home</a>
-<a routerLink="/closeDoor">purchase</a>
+<!-- <a routerLink="/">Home</a>
+<a routerLink="/closeDoor">purchase</a> -->
 <router-outlet></router-outlet>
